Subversion Maven setup
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@8 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
   	<url>http://hudson</url>
   </ciManagement>
   <scm>
+  	<connection>scm:svn:https://zk-dl.googlecode.com/svn</connection>
   	<developerConnection>jiri.bubnik@gmail.com</developerConnection>
   	<url>https://zk-dl.googlecode.com/svn</url>
   </scm>
