ZK-68 - změna maven balíku na cz.datalite.zk-dl
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@10 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>zk-dl</artifactId>
-    <groupId>cz.datalite</groupId>
+    <groupId>cz.datalite.zk-dl</groupId>
     <version>0.9-SNAPSHOT</version>
   </parent>
-  <groupId>cz.datalite</groupId>
+  <groupId>cz.datalite.zk-dl</groupId>
   <artifactId>HibernateDAO</artifactId>
   <version>0.9-SNAPSHOT</version>
   <name>Hibernate DAO</name>
@@ -36,7 +36,7 @@
     	<scope>compile</scope>
     </dependency>
     <dependency>
-    	<groupId>cz.datalite</groupId>
+    	<groupId>cz.datalite.zk-dl</groupId>
     	<artifactId>DLHelpers</artifactId>
     	<version>${project.version}</version>
     	<type>jar</type>
