--- a/SpringService/pom.xml
+++ b/SpringService/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>zk-dl</artifactId>
-    <groupId>cz.datalite</groupId>
+    <groupId>cz.datalite.zk-dl</groupId>
     <version>0.9-SNAPSHOT</version>
   </parent>
-  <groupId>cz.datalite</groupId>
+  <groupId>cz.datalite.zk-dl</groupId>
   <artifactId>SpringService</artifactId>
   <version>0.9-SNAPSHOT</version>
   <name>SpringService</name>
@@ -71,14 +71,14 @@
 
 
 <dependency>
-	<groupId>cz.datalite</groupId>
+	<groupId>cz.datalite.zk-dl</groupId>
 	<artifactId>DLHelpers</artifactId>
 	<version>${project.version}</version>
 	<type>jar</type>
 	<scope>compile</scope>
 </dependency>
 <dependency>
-	<groupId>cz.datalite</groupId>
+	<groupId>cz.datalite.zk-dl</groupId>
 	<artifactId>HibernateDAO</artifactId>
 	<version>0.9-SNAPSHOT</version>
 	<type>jar</type>
