--- a/DLHelpers/pom.xml
+++ b/DLHelpers/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>zk-dl</artifactId>
-    <groupId>cz.datalite</groupId>
+    <groupId>cz.datalite.zk-dl</groupId>
     <version>0.9-SNAPSHOT</version>
   </parent>
-  <groupId>cz.datalite</groupId>
+  <groupId>cz.datalite.zk-dl</groupId>
   <artifactId>DLHelpers</artifactId>
   <version>0.9-SNAPSHOT</version>
   <name>DLHelpers</name>
