--- a/ZKComponents/pom.xml
+++ b/ZKComponents/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>zk-dl</artifactId>
-		<groupId>cz.datalite</groupId>
+		<groupId>cz.datalite.zk-dl</groupId>
 		<version>0.9-SNAPSHOT</version>
 	</parent>
-	<groupId>cz.datalite</groupId>
+	<groupId>cz.datalite.zk-dl</groupId>
 	<artifactId>ZKComponents</artifactId>
 	<version>0.9-SNAPSHOT</version>
 	<name>ZKComponents</name>
@@ -33,7 +33,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>cz.datalite</groupId>
+			<groupId>cz.datalite.zk-dl</groupId>
 			<artifactId>DLHelpers</artifactId>
 			<version>${project.version}</version>
 			<type>jar</type>
