--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>zk-dl</artifactId>
-    <groupId>cz.datalite</groupId>
+    <groupId>cz.datalite.zk-dl</groupId>
     <version>0.9-SNAPSHOT</version>
   </parent>
-  <groupId>cz.datalite</groupId>
+  <groupId>cz.datalite.zk-dl</groupId>
   <artifactId>ZKComposer</artifactId>
   <version>0.9-SNAPSHOT</version>
   <name>ZK Composer</name>
@@ -31,7 +31,7 @@
 			<version>5.0.3</version>
 		</dependency>
 		<dependency>
-			<groupId>cz.datalite</groupId>
+			<groupId>cz.datalite.zk-dl</groupId>
 			<artifactId>DLHelpers</artifactId>
 			<version>0.9-SNAPSHOT</version>
 			<type>jar</type>
