--- a/ZKDLComponents/pom.xml
+++ b/ZKDLComponents/pom.xml
@@ -3,15 +3,34 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>zk-dl</artifactId>
-		<groupId>cz.datalite</groupId>
+		<groupId>cz.datalite.zk-dl</groupId>
 		<version>0.9-SNAPSHOT</version>
 	</parent>
-	<groupId>cz.datalite</groupId>
+	<groupId>cz.datalite.zk-dl</groupId>
 	<artifactId>ZKDLComponents</artifactId>
 	<version>0.9-SNAPSHOT</version>
 	<name>ZKDLComponents</name>
-
-	<dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zk</artifactId>
@@ -34,7 +53,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>cz.datalite</groupId>
+			<groupId>cz.datalite.zk-dl</groupId>
 			<artifactId>DLHelpers</artifactId>
 			<version>${project.version}</version>
 			<type>jar</type>
