--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@ Multiple loosely coupled modules which extend ZK framework, originally created b
 
 ZKComposer - controll the MVC design with annotations @ZkEvent?, @ZkComponent?, @ZkBinding?, ... (similar to zkspring or zkcdi projects, however without any framework dependencies).
 
-ZKDLComponents – splits ZK data driven components (listbox, combobox) to MVC design, adds support for easy large data manipulation and contains many pre-built user controls (filter manager, sort manager, visible listbox columns manager, export to excel, etc.)
+ZKDLComponents ï¿½ splits ZK data driven components (listbox, combobox) to MVC design, adds support for easy large data manipulation and contains many pre-built user controls (filter manager, sort manager, visible listbox columns manager, export to excel, etc.)
 
 HibernateDAO &amp; ZKDLComponentsHibernateExtensions - Hibernate generic DAO design with extensions for ZKDLComponents to replace all your plumbing code (filter, sort, lazy loading, CRUD).
 
@@ -45,6 +45,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
   		</plugin>
   	</plugins>
   </build>
+  
   <dependencies>
   	<dependency>
   		<groupId>log4j</groupId>
@@ -73,6 +74,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
 
   	</dependency>
   </dependencies>
+  
   <modules>
   	<module>HibernateDAO</module>
   	<module>ZKComposer</module>
@@ -82,16 +84,32 @@ SpringService? - service layer with spring - generic service which speaks to gen
   	<module>ZKDLComponentsHibernateExt</module>
   	<module>DLHelpers</module>
   </modules>
+  
   <repositories>
   	<repository>
   		<id>jboss</id>
   		<name>JBoss</name>
-  		<url>https://repository.jboss.org/nexus/content/groups/public</url>
+  		<url>http://repository.jboss.com/maven2</url>
   	</repository>
   	<repository>
   		<id>zkoss</id>
   		<name>ZK Repository</name>
   		<url>http://mavensync.zkoss.org/maven2</url>
   	</repository> 
-  </repositories>  
+  </repositories>
+  
+    <distributionManagement>
+        <repository>
+            <id>DTLArtifactory</id>
+            <name>DTLArtifactory-releases</name>
+            <url>http://192.168.32.17:8081/artifactory/libs-releases-local</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>DTLArtifactory</id>
+            <name>DTLArtifactory-snapshots</name>
+            <url>http://192.168.32.17:8081/artifactory/libs-snapshots-local</url>
+        </snapshotRepository>
+    </distributionManagement>
+  
 </project>
