--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,20 @@ SpringService? - service layer with spring - generic service which speaks to gen
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
+              <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
   		</plugin>
+  	    <plugin>
+  	        <groupId>org.apache.maven.plugins</groupId>
+  	        <artifactId>maven-resources-plugin</artifactId>
+  	        <version>2.2</version>
+  	        <configuration>
+  	            <encoding>${project.build.sourceEncoding}</encoding>
+  	        </configuration>
+  	    </plugin>
   	</plugins>
   </build>
-  
+
   <dependencies>
   	<dependency>
   		<groupId>log4j</groupId>
@@ -74,7 +83,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
 
   	</dependency>
   </dependencies>
-  
+
   <modules>
   	<module>HibernateDAO</module>
   	<module>ZKComposer</module>
@@ -84,7 +93,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
   	<module>ZKDLComponentsHibernateExt</module>
   	<module>DLHelpers</module>
   </modules>
-  
+
   <repositories>
   	<repository>
   		<id>jboss</id>
@@ -95,9 +104,9 @@ SpringService? - service layer with spring - generic service which speaks to gen
   		<id>zkoss</id>
   		<name>ZK Repository</name>
   		<url>http://mavensync.zkoss.org/maven2</url>
-  	</repository> 
+  	</repository>
   </repositories>
-  
+
     <distributionManagement>
         <repository>
             <id>DTLArtifactory</id>
@@ -111,5 +120,7 @@ SpringService? - service layer with spring - generic service which speaks to gen
             <url>http://192.168.32.17:8081/artifactory/libs-snapshots-local</url>
         </snapshotRepository>
     </distributionManagement>
-  
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
