--- a/ZKComponents/pom.xml
+++ b/ZKComponents/pom.xml
@@ -14,22 +14,22 @@
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zk</artifactId>
-			<version>5.0.3</version>
+			<version>${org.zkframework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zul</artifactId>
-			<version>5.0.3</version>
+			<version>${org.zkframework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zhtml</artifactId>
-			<version>5.0.3</version>
+			<version>${org.zkframework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkplus</artifactId>
-			<version>5.0.3</version>
+			<version>${org.zkframework.version}</version>
 		</dependency>
 
 		<dependency>
