- Hibernate required library changed to 3.2. - to allow JPA 1.0 compatibility - GenericDAOImpl.getCount() - Hibernate in version 3.2. returns count(*) as Integer - both values Integer and Long are now expected
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@41 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -5,29 +5,20 @@
     <groupId>cz.datalite.zk-dl</groupId>
     <version>0.9-SNAPSHOT</version>
   </parent>
+
   <groupId>cz.datalite.zk-dl</groupId>
   <artifactId>HibernateDAO</artifactId>
   <version>0.9-SNAPSHOT</version>
   <name>Hibernate DAO</name>
+
   <dependencies>
+
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-annotations</artifactId>
-      <version>3.5.0-Final</version>
-      <scope>compile</scope>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>3.3.2.GA</version>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>3.5.0-Final</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>3.5.0-Final</version>
-      <scope>compile</scope>
-    </dependency>
+
     <dependency>
     	<groupId>org.hibernate</groupId>
     	<artifactId>hibernate-validator</artifactId>
