- Hibernate version changed back to 3.5 - comaptibility with JPA 1.0 should be solved in web projects (can overwrite hibernate version if declared explicitly). Only Hibernate entitymanager dependency added (so it easy to overwrite) - Added maven source plugin to deploy source to repository
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@45 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -5,20 +5,17 @@
     <groupId>cz.datalite.zk-dl</groupId>
     <version>0.9-SNAPSHOT</version>
   </parent>
-
   <groupId>cz.datalite.zk-dl</groupId>
   <artifactId>HibernateDAO</artifactId>
   <version>0.9-SNAPSHOT</version>
   <name>Hibernate DAO</name>
-
   <dependencies>
 
     <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>3.3.2.GA</version>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>3.5.0-Final</version>
     </dependency>
-
     <dependency>
     	<groupId>org.hibernate</groupId>
     	<artifactId>hibernate-validator</artifactId>
