- Quick Filter input values validation - Lovbox - onOk event (enter) fixed (javascript bandbox fix) - Paging - detail info
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@51 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -15,6 +15,7 @@ filter.operators.between=Between
 quickFilter.tooltip.filterRange=Filter by
 quickFilter.tooltip.openFilter=Open filter selection menu
 quickFilter.menu.all=All
+quickFilter.validation.failed=Please enter valid value for filter
 
 lovbox.clear=Clear
 
@@ -51,3 +52,5 @@ listbox.exportManager.displayed=Displayed columns
 listbox.exportManager.recordCount=Number of rows to be export (0 = all, max. 36000)
 listbox.exportManager.sheetName=Sheet name
 listbox.exportManager.fileName=File name
+
+listbox.paging.noData=No data available
