Localization of sorting messages (ascending, descending)
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@63 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -36,6 +36,9 @@ listbox.columnManager.displayed=Displayed columns
 listbox.sortingManager.title=Sorting manager
 listbox.sortingManager.column=Column
 listbox.sortingManager.sort=Sort type
+listbox.sortingManager.sort.ascending=Ascending
+listbox.sortingManager.sort.natural=Do not sort
+listbox.sortingManager.sort.descending=Descending
 listbox.sortingManager.number=#N
 
 listbox.filterManager.title=Filter manager
